--- a/android/res/layout/place_page_hotel_description.xml
+++ b/android/res/layout/place_page_hotel_description.xml
@@ -11,33 +11,33 @@
               tools:visibility="visible">
 
   <TextView
-          android:layout_marginLeft="@dimen/margin_base"
-          android:layout_marginRight="@dimen/margin_base"
-          android:layout_marginTop="@dimen/margin_base"
-          style="@style/PlacePageTitleText"
-          android:text="@string/details"/>
+    android:layout_marginLeft="@dimen/margin_base"
+    android:layout_marginRight="@dimen/margin_base"
+    android:layout_marginTop="@dimen/margin_base"
+    style="@style/PlacePageTitleText"
+    android:text="@string/details"/>
 
   <com.mapswithme.maps.widget.LineCountTextView
-          android:id="@+id/tv__place_hotel_details"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="@dimen/margin_base"
-          android:layout_marginRight="@dimen/margin_base"
-          android:layout_marginTop="@dimen/margin_half_plus"
-          android:layout_marginBottom="@dimen/margin_half_plus"
-          android:textAppearance="@style/MwmTextAppearance.Body3.Primary"
-          android:maxLines="5"
-          tools:text="One of our top picks in New York City. This boutique hotel in the Manhattan neighborhood of Nolita features a private rooftop and rooms with free WiFi. The Bowery subway station is 1 block from this New York hotel."/>
+    android:id="@+id/tv__place_hotel_details"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/margin_base"
+    android:layout_marginRight="@dimen/margin_base"
+    android:layout_marginTop="@dimen/margin_half_plus"
+    android:layout_marginBottom="@dimen/margin_half_plus"
+    android:textAppearance="@style/MwmTextAppearance.Body3.Primary"
+    android:maxLines="@integer/pp_hotel_description_lines"
+    tools:text="One of our top picks in New York City. This boutique hotel in the Manhattan neighborhood of Nolita features a private rooftop and rooms with free WiFi. The Bowery subway station is 1 block from this New York hotel."/>
 
   <TextView
-          android:id="@+id/tv__place_hotel_more"
-          style="@style/PlacePageMetadataText.Button"
-          android:layout_marginLeft="@dimen/margin_base"
-          android:layout_marginRight="@dimen/margin_base"
-          android:height="@dimen/height_block_base"
-          android:background="?clickableBackground"
-          android:gravity="center"
-          android:text="@string/placepage_more_button"/>
+    android:id="@+id/tv__place_hotel_more"
+    style="@style/PlacePageMetadataText.Button"
+    android:layout_marginLeft="@dimen/margin_base"
+    android:layout_marginRight="@dimen/margin_base"
+    android:height="@dimen/height_block_base"
+    android:background="?clickableBackground"
+    android:gravity="center"
+    android:text="@string/placepage_more_button"/>
 
   <include layout="@layout/divider_horizontal"/>
 </LinearLayout>
