--- a/android/res/values/styles-text.xml
+++ b/android/res/values/styles-text.xml
@@ -121,6 +121,10 @@
     <item name="android:textStyle">bold</item>
   </style>
 
+  <style name="MwmTextAppearance.RoutingDimension.Inline" parent="MwmTextAppearance.RoutingNumber">
+    <item name="android:textSize">@dimen/text_size_routing_dimension_inline</item>
+  </style>
+
   <style name="MwmTextAppearance.RoutingDetail">
     <item name="android:textSize">@dimen/text_size_routing_plan_detail</item>
     <item name="android:fontFamily" tools:ignore="NewApi">@string/robotoMedium</item>
@@ -148,15 +152,13 @@
     <item name="android:textSize">@dimen/text_size_nav_circle_exit</item>
   </style>
 
-  <style name="MwmTextAppearance.PlacePage"
-         parent="MwmTextAppearance.Body1"/>
+  <style name="MwmTextAppearance.PlacePage" parent="MwmTextAppearance.Body1"/>
 
   <style name="MwmTextAppearance.PlacePage.Accent">
     <item name="android:textColor">?colorAccent</item>
   </style>
 
-  <style name="MwmTextAppearance.PlacePage.Title"
-         parent="MwmTextAppearance.Body3"/>
+  <style name="MwmTextAppearance.PlacePage.Title" parent="MwmTextAppearance.Body3"/>
 
   <style name="MwmTextAppearance.Editor">
   </style>
