--- a/android/res/layout-land/place_page_details.xml
+++ b/android/res/layout-land/place_page_details.xml
@@ -31,6 +31,8 @@
         android:layout_height="1dp"
         android:layout_marginBottom="@dimen/margin_half"/>
 
+      <include layout="@layout/place_page_viator"/>
+
       <include
         layout="@layout/divider_horizontal"/>
 
