--- a/qt/res/resources.qrc
+++ b/qt/res/resources.qrc
@@ -13,6 +13,11 @@
         <file>selectmode.png</file>
         <file>clear.png</file>
         <file>traffic.png</file>
+        <file>point-finish.png</file>
+        <file>point-intermediate.png</file>
+        <file>point-start.png</file>
+        <file>clear-route.png</file>
+        <file>routing.png</file>
     </qresource>
     <qresource prefix="/ui">
         <file>logo.png</file>
