--- a/android/res/layout-land/layout_nav_search.xml
+++ b/android/res/layout-land/layout_nav_search.xml
@@ -7,8 +7,8 @@
   android:layout_height="match_parent"
   android:theme="?navButtonsTheme"
   android:layout_marginBottom="@dimen/nav_menu_height"
-  tools:background="@color/bg_primary"
-  tools:showIn="@layout/activity_map">
+  android:padding="@dimen/nav_frame_padding"
+  tools:background="@color/bg_primary">
 
   <View
     android:id="@+id/touch_interceptor"
@@ -21,7 +21,7 @@
     android:layout_width="286dp"
     android:layout_height="56dp"
     android:layout_alignParentBottom="true"
-    android:layout_marginBottom="@dimen/margin_half_plus"
+    android:layout_marginBottom="@dimen/nav_search_frame_offset"
     android:background="?searchLayoutBackground"
     android:orientation="horizontal"
     android:padding="@dimen/margin_quarter"
@@ -65,7 +65,7 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    android:layout_marginBottom="@dimen/margin_half"
+    android:layout_marginBottom="@dimen/margin_base_plus"
     android:background="?nav_background"
     android:src="@drawable/ic_menu_search"
     android:tint="@null"/>
@@ -75,8 +75,6 @@
     style="@style/MwmWidget.SearchNavigationButton"
     android:layout_width="@dimen/margin_quadruple"
     android:layout_height="@dimen/margin_quadruple"
-    android:layout_marginStart="@dimen/margin_eighth"
-    android:layout_marginLeft="@dimen/margin_eighth"
     android:layout_above="@id/btn_search"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
