--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -117,6 +117,7 @@
   <dimen name="nav_zoom_top">258dp</dimen>
   <dimen name="nav_button_top_limit">68dp</dimen>
   <dimen name="nav_my_position_bottom">136dp</dimen>
+  <dimen name="nav_search_frame_offset">28dp</dimen>
 
   <dimen name="panel_elevation">12dp</dimen>
   <dimen name="appbar_elevation">4dp</dimen>
