--- a/iphone/Maps/Classes/CustomViews/NavigationDashboard/Views/MWMNavigationInfoView.xib
+++ b/iphone/Maps/Classes/CustomViews/NavigationDashboard/Views/MWMNavigationInfoView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,14 +17,62 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MWMNavigationInfoView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pei-0V-lM7" customClass="MWMNavigationAddPointToastView">
+                    <rect key="frame" x="0.0" y="1366" width="1024" height="20"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="aJu-Io-wpV">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="20"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="751" horizontalCompressionResistancePriority="400" text="Добавьте стартовую точку для планирования маршрута." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nT5-UU-d1c">
+                                <rect key="frame" x="16" y="12" width="453.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="900" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="OtJ-Fs-9VY">
+                                <rect key="frame" x="888" y="0.0" width="136" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="250" constant="44" id="wLF-3Z-FaU"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="2" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="4" minY="0.0" maxX="-4" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="-4" minY="0.0" maxX="4" maxY="0.0"/>
+                                <state key="normal" title="Истользовать" image="ic_get_position"/>
+                                <connections>
+                                    <action selector="addLocationRoutePoint" destination="-1" eventType="touchUpInside" id="5dQ-1Q-u0o"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="OtJ-Fs-9VY" firstAttribute="top" secondItem="nT5-UU-d1c" secondAttribute="bottom" priority="250" id="3Rz-sS-o8e"/>
+                            <constraint firstItem="OtJ-Fs-9VY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nT5-UU-d1c" secondAttribute="trailing" priority="500" constant="16" id="CTQ-m1-zpW"/>
+                            <constraint firstAttribute="bottom" secondItem="nT5-UU-d1c" secondAttribute="bottom" priority="500" constant="12" id="DRp-LQ-V6O"/>
+                            <constraint firstAttribute="bottom" secondItem="OtJ-Fs-9VY" secondAttribute="bottom" priority="750" id="GPI-44-Zxz"/>
+                            <constraint firstAttribute="trailing" secondItem="OtJ-Fs-9VY" secondAttribute="trailing" id="HNP-Vm-Kxv"/>
+                            <constraint firstItem="nT5-UU-d1c" firstAttribute="leading" secondItem="aJu-Io-wpV" secondAttribute="leading" constant="16" id="SH6-LI-eFK"/>
+                            <constraint firstItem="OtJ-Fs-9VY" firstAttribute="top" secondItem="aJu-Io-wpV" secondAttribute="top" priority="500" id="jGq-7m-tAl"/>
+                            <constraint firstAttribute="trailing" secondItem="nT5-UU-d1c" secondAttribute="trailing" priority="250" constant="16" id="pa6-hM-C5h"/>
+                            <constraint firstItem="nT5-UU-d1c" firstAttribute="top" secondItem="aJu-Io-wpV" secondAttribute="top" constant="12" id="tyt-8u-Kh9"/>
+                        </constraints>
+                    </view>
+                    <blurEffect style="dark"/>
+                    <connections>
+                        <outlet property="actionButton" destination="OtJ-Fs-9VY" id="dHa-tU-xzk"/>
+                        <outlet property="actionButtonHidden" destination="GPI-44-Zxz" id="e0I-oS-aBg"/>
+                        <outlet property="descriptionLabel" destination="nT5-UU-d1c" id="dFc-Yg-Fkl"/>
+                        <outletCollection property="multilineConstraints" destination="wLF-3Z-FaU" collectionClass="NSMutableArray" id="2Xn-Vv-34b"/>
+                        <outletCollection property="multilineConstraints" destination="3Rz-sS-o8e" collectionClass="NSMutableArray" id="rTW-2L-6fR"/>
+                        <outletCollection property="multilineConstraints" destination="pa6-hM-C5h" collectionClass="NSMutableArray" id="EMp-Ge-oaP"/>
+                    </connections>
+                </visualEffectView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YYv-pG-Wkw" userLabel="Street name" customClass="SolidTouchView">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="65.5"/>
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="65.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ленинградский проспект" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ShI-bz-5g8">
-                            <rect key="frame" x="112" y="32" width="255" height="21.5"/>
+                            <rect key="frame" x="112" y="32" width="904" height="21.5"/>
                             <accessibility key="accessibilityConfiguration">
                                 <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                             </accessibility>
@@ -61,8 +109,20 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XMv-au-OYf" customClass="MWMButton">
+                    <rect key="frame" x="6" y="623" width="56" height="56"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="56" id="ehZ-Oc-96g"/>
+                        <constraint firstAttribute="height" constant="56" id="p3i-Ly-sTx"/>
+                    </constraints>
+                    <state key="normal" image="ic_routing_search_light"/>
+                    <connections>
+                        <action selector="bookmarksButtonTouchUpInside" destination="iN0-l3-epB" eventType="touchUpInside" id="YwB-gA-E8p"/>
+                    </connections>
+                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TMW-aw-1RT">
-                    <rect key="frame" x="-66" y="265.5" width="200" height="200"/>
+                    <rect key="frame" x="-66" y="615" width="200" height="200"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bv-7H-IZt" userLabel="Gas" customClass="MWMButton">
                             <rect key="frame" x="78" y="14" width="44" height="44"/>
@@ -165,7 +225,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xna-Q1-7zW" customClass="MWMButton">
-                    <rect key="frame" x="6" y="337.5" width="56" height="56"/>
+                    <rect key="frame" x="6" y="687" width="56" height="56"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="56" id="IJq-4U-XHW"/>
@@ -304,20 +364,28 @@
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Xna-Q1-7zW" secondAttribute="bottom" priority="250" constant="46" id="0qY-1y-NiH"/>
                 <constraint firstAttribute="trailing" secondItem="YYv-pG-Wkw" secondAttribute="trailing" id="15D-kN-gda"/>
+                <constraint firstAttribute="trailing" secondItem="Pei-0V-lM7" secondAttribute="trailing" id="26j-tD-P9y"/>
                 <constraint firstItem="TMW-aw-1RT" firstAttribute="centerY" secondItem="Xna-Q1-7zW" secondAttribute="centerY" id="652-PO-iav"/>
                 <constraint firstItem="YYv-pG-Wkw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IBQ-gK-Cpe"/>
                 <constraint firstItem="Xna-Q1-7zW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="6" id="J7x-54-WT5"/>
+                <constraint firstItem="Pei-0V-lM7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="bottom" priority="750" id="JqF-da-c1k"/>
                 <constraint firstItem="Xna-Q1-7zW" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" priority="500" constant="32" id="KQb-ju-1bf"/>
                 <constraint firstItem="YYv-pG-Wkw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Rd5-Hl-fSF"/>
+                <constraint firstItem="Pei-0V-lM7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="TvX-b3-3Sa"/>
+                <constraint firstItem="XMv-au-OYf" firstAttribute="centerX" secondItem="Xna-Q1-7zW" secondAttribute="centerX" id="XwW-6c-UzJ"/>
                 <constraint firstItem="TMW-aw-1RT" firstAttribute="leading" secondItem="Xna-Q1-7zW" secondAttribute="leading" priority="250" constant="-2" id="Y9b-UG-buF"/>
                 <constraint firstItem="TMW-aw-1RT" firstAttribute="centerX" secondItem="Xna-Q1-7zW" secondAttribute="centerX" priority="500" id="ctJ-SL-eKZ"/>
                 <constraint firstItem="Aa6-N8-acP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="28" id="goU-O7-rpS"/>
                 <constraint firstItem="ShI-bz-5g8" firstAttribute="leading" secondItem="Aa6-N8-acP" secondAttribute="trailing" priority="999" constant="8" id="mdA-B9-tvQ"/>
+                <constraint firstItem="Pei-0V-lM7" firstAttribute="top" secondItem="Xna-Q1-7zW" secondAttribute="bottom" priority="250" constant="12" id="pFP-r6-dGK"/>
                 <constraint firstItem="Aa6-N8-acP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="pXD-dk-ku2"/>
+                <constraint firstItem="Xna-Q1-7zW" firstAttribute="top" secondItem="XMv-au-OYf" secondAttribute="bottom" constant="8" id="tEP-Qf-uBZ"/>
+                <constraint firstAttribute="bottom" secondItem="Pei-0V-lM7" secondAttribute="bottom" priority="500" id="yP1-ip-l24"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="bookmarksButton" destination="XMv-au-OYf" id="g3E-jo-X2E"/>
                 <outlet property="distanceToNextTurnLabel" destination="KuR-1J-VI2" id="n0i-t9-Vj2"/>
                 <outlet property="nextTurnImageView" destination="AJe-8N-rpk" id="iMm-9u-rPI"/>
                 <outlet property="roundTurnLabel" destination="teB-QQ-oib" id="5p2-zz-Pe9"/>
@@ -334,6 +402,8 @@
                 <outlet property="secondTurnView" destination="8Zu-Ff-6p2" id="yEK-rY-S50"/>
                 <outlet property="streetNameLabel" destination="ShI-bz-5g8" id="eZd-Es-g0l"/>
                 <outlet property="streetNameView" destination="YYv-pG-Wkw" id="gbk-SH-idq"/>
+                <outlet property="toastView" destination="Pei-0V-lM7" id="gTw-kd-UAJ"/>
+                <outlet property="toastViewHideOffset" destination="JqF-da-c1k" id="WtX-JJ-0lS"/>
                 <outlet property="turnsTopOffset" destination="goU-O7-rpS" id="MEy-6X-7Qq"/>
                 <outlet property="turnsView" destination="Aa6-N8-acP" id="daB-uQ-UFM"/>
                 <outlet property="turnsWidth" destination="6Ja-Xp-g8h" id="kCr-a1-fph"/>
@@ -361,12 +431,14 @@
                 <outletCollection property="searchButtonsSideSize" destination="euI-Cb-zo4" id="W8L-Ax-Ks1"/>
                 <outletCollection property="searchButtons" destination="RP3-01-Pj7" id="1nL-Ib-y49"/>
                 <outletCollection property="searchButtonsSideSize" destination="UEW-5h-9Jk" id="ZWN-om-GgR"/>
-                <outletCollection property="searchLandscapeConstraints" destination="0qY-1y-NiH" id="8Yg-cU-neJ"/>
                 <outletCollection property="searchLandscapeConstraints" destination="Y9b-UG-buF" id="cjs-so-6PQ"/>
+                <outletCollection property="searchLandscapeConstraints" destination="pFP-r6-dGK" id="p6X-D7-oom"/>
             </connections>
+            <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_get_position" width="20" height="20"/>
         <image name="ic_routing_atm_on" width="24" height="24"/>
         <image name="ic_routing_food_on" width="24" height="24"/>
         <image name="ic_routing_fuel_on" width="24" height="24"/>
