--- a/iphone/Maps/UI/PlacePage/PlacePageLayout/Content/TaxiCell/PlacePageTaxiCell.xib
+++ b/iphone/Maps/UI/PlacePage/PlacePageLayout/Content/TaxiCell/PlacePageTaxiCell.xib
@@ -1,61 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MWMPlacePageTaxiCell" rowHeight="66" id="16z-3Y-tuS" customClass="MWMPlacePageTaxiCell">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PlacePageTaxiCell" rowHeight="66" id="16z-3Y-tuS" customClass="PlacePageTaxiCell" customModule="cm_beta" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="16z-3Y-tuS" id="5rg-b2-ZRm">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="63.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placepage_taxi" translatesAutoresizingMaskIntoConstraints="NO" id="Y6E-Lj-WUA">
-                        <rect key="frame" x="16" y="18" width="28" height="28"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y6E-Lj-WUA">
+                        <rect key="frame" x="16" y="12" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="28" id="00V-V7-7X3"/>
-                            <constraint firstAttribute="width" constant="28" id="H0O-6d-RuH"/>
+                            <constraint firstAttribute="height" constant="40" id="00V-V7-7X3"/>
+                            <constraint firstAttribute="width" constant="40" id="H0O-6d-RuH"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="coloring" value="MWMBlack"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uber" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bRB-nP-rFu">
-                        <rect key="frame" x="60" y="22" width="38" height="21"/>
+                        <rect key="frame" x="72" y="22" width="38" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="regular17"/>
-                            <userDefinedRuntimeAttribute type="string" keyPath="colorName" value="blackPrimaryText"/>
-                        </userDefinedRuntimeAttributes>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="501" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zWn-ti-hGb">
-                        <rect key="frame" x="305" y="13" width="56" height="38"/>
+                        <rect key="frame" x="281" y="13" width="80" height="38"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="EU9-cY-PfD"/>
+                        </constraints>
                         <inset key="contentEdgeInsets" minX="8" minY="10" maxX="8" maxY="10"/>
                         <state key="normal" title="Order"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="4"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="layer.borderUIColor">
-                                <color key="value" red="0.11764705882352941" green="0.58823529411764708" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                <integer key="value" value="1"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="taxi_order"/>
-                            <userDefinedRuntimeAttribute type="string" keyPath="textColorName" value="linkBlue"/>
-                        </userDefinedRuntimeAttributes>
                         <connections>
+                            <action selector="orderAction" destination="16z-3Y-tuS" eventType="touchUpInside" id="aaO-oV-60G"/>
                             <action selector="orderTaxi" destination="16z-3Y-tuS" eventType="touchUpInside" id="Yhy-5a-CZU"/>
                         </connections>
                     </button>
@@ -72,10 +59,12 @@
                     <constraint firstAttribute="bottom" secondItem="zWn-ti-hGb" secondAttribute="bottom" constant="12.5" id="vno-dE-n9V"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="icon" destination="Y6E-Lj-WUA" id="5DU-q1-nkj"/>
+                <outlet property="orderButton" destination="zWn-ti-hGb" id="ziE-A2-hMD"/>
+                <outlet property="title" destination="bRB-nP-rFu" id="Bvt-kl-cgG"/>
+            </connections>
             <point key="canvasLocation" x="18.5" y="45"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="ic_placepage_taxi" width="28" height="28"/>
-    </resources>
 </document>
