--- a/android/res/layout/fragment_routing.xml
+++ b/android/res/layout/fragment_routing.xml
@@ -23,6 +23,19 @@
     layout="@layout/routing_action_panel"
     android:visibility="gone"/>
 
+  <TextView
+    android:id="@+id/error"
+    android:paddingLeft="@dimen/margin_base"
+    android:paddingStart="@dimen/margin_base"
+    android:paddingRight="@dimen/margin_base"
+    android:paddingEnd="@dimen/margin_base"
+    android:paddingTop="@dimen/margin_half_plus"
+    android:paddingBottom="@dimen/margin_half_plus"
+    android:textAppearance="@style/MwmTextAppearance.Body3"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:visibility="gone"/>
+
   <Space
     android:layout_width="match_parent"
     android:layout_height="0dp"
